welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: ')' expected but ';' found.
	setPos(3;0);
                ^ColumnByColumn:1: error: ';' expected but ')' found.
	setPos(3;0);
                  ^